--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: 工具箱
 ---
 <div class="container text-center pt-3">
-  <h2 class="font-weight-bold mb-3">工具箱</h2>
+  <h2 class="font-weight-bold mb-3">{{ page.title }}</h2>
   <p><a href="/asc">平均分計算器</a></p>
   <p><a href="/tfc">合廿四計算器</a></p>
   <p><a href="/cube">魔方打亂工具</a></p>
