--- a/tfc.html
+++ b/tfc.html
@@ -3,7 +3,7 @@ layout: default
 title: 合廿四計算器
 ---
 <nav class="navbar navbar-light bg-light d-flex justify-content-center shadow sticky-top mb-3">
-  <span class="navbar-brand">合廿四計算器</span>
+  <span class="navbar-brand">{{ page.title }}</span>
 </nav>
 
 <div class="container">
