--- a/404.html
+++ b/404.html
@@ -3,5 +3,5 @@ layout: default
 title: 404
 ---
 <div class="container text-center pt-3">
-  <h1 class="font-weight-bold mb-3">404</h1>
+  <h1 class="font-weight-bold mb-3">{{ page.title }}</h1>
 </div>
