--- a/js.html
+++ b/js.html
@@ -3,7 +3,7 @@ layout: default
 title: JS 運行工具
 ---
 <nav class="navbar navbar-light bg-light d-flex justify-content-center shadow sticky-top mb-3">
-  <span class="navbar-brand">JS 運行工具</span>
+  <span class="navbar-brand">{{ page.title }}</span>
 </nav>
 
 <div class="container">
