--- a/cube.html
+++ b/cube.html
@@ -14,7 +14,7 @@
 <body class="h-100">
 
 <nav class="navbar navbar-light bg-light clearfix d-flex justify-content-center shadow sticky-top mb-3">
-<span class="navbar-brand">{{ page.title }}</span>
+<span class="navbar-brand">魔方打亂工具</span>
 <div class="spinner-border text-secondary" id="spinner" style="display:none"></div>
 </nav>
 
