--- a/cube.html
+++ b/cube.html
@@ -24,7 +24,7 @@
 <div class="input-group-prepend">
 <span class="input-group-text">魔方</span>
 </div>
-<select class="custom-select" id="name">
+<select class="custom-select" id="name" aria-label="魔方">
 <option value="333">三階</option>
 <option value="222">二階</option>
 <option value="444">四階</option>
