--- a/js.html
+++ b/js.html
@@ -9,7 +9,7 @@ title: JS 運行工具
 <div class="container">
 
   <div class="form-group">
-    <textarea class="form-control" id="jscode" placeholder="在這裡輸入 Javascript 代碼..." rows="9">console.log(true);</textarea>
+    <textarea class="form-control" id="jscode" placeholder="在這裡輸入 Javascript 代碼..." aria-label="在這裡輸入 Javascript 代碼" rows="9">console.log(true);</textarea>
   </div>
 
   <button type="button" class="btn btn-outline-secondary btn-lg btn-block mb-3" onClick="submit()">運行代碼！</button>
